# tidal-wave

./: .gitignore  CMakeLists.txt  LICENSE  README.md  improvements.md  visual_inspection_report.md
.github/workflows/: release.yml
qml/: Theme.qml  main.qml
qml/components/: BackButton.qml  ContextMenu.qml  HorizontalSection.qml  LoadingOverlay.qml  MediaCard.qml  NavIcon.qml  PageHeader.qml  PillButton.qml  PlayerBar.qml  QueuePanel.qml  SearchBar.qml  SeekBar.qml  SideBar.qml  TrackRow.qml  VectorIcon.qml  VolumeSlider.qml
qml/pages/: AlbumPage.qml  ArtistPage.qml  CollectionPage.qml  HomePage.qml  LoginPage.qml  MixPage.qml  NowPlayingPage.qml  PlaylistPage.qml  RadioPage.qml  SearchPage.qml
src/: main.cpp
src/api/: Auth.cpp  Auth.h  Models.h  TidalApi.cpp  TidalApi.h  TidalBridge.cpp  TidalBridge.h  TidalClient.cpp  TidalClient.h
src/mpris/: MprisPlayer.cpp  MprisPlayer.h
src/player/: Player.cpp  Player.h  Queue.cpp  Queue.h
src/ui/: Application.cpp  Application.h  ImageProvider.cpp  ImageProvider.h  discordrpc.cpp  discordrpc.h
